--- a/views/display-docs.ejs
+++ b/views/display-docs.ejs
@@ -39,7 +39,7 @@
                 <ul class="nav pull-right">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Manage Documents
+                            Manage Projects
                             <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
@@ -47,8 +47,6 @@
                             <% if (userDocuments.length > 0) { %>
                             <li><a href="javascript:void(0);" onclick="docs_manager.openCreateSubDocView();"> Add Doc</a></li>
                             <% } %>
-                            
-                            <li><a href="javascript:void(0);" onclick="user_messages.showMessages();">My Messages</a></li>
                         </ul>
                     </li>
                 </ul>
