--- a/views/open-document.ejs
+++ b/views/open-document.ejs
@@ -53,7 +53,7 @@
 	<i class="pull-right icon-arrow-right" style="margin-left:3px;"></i>
 	Next
       </button>
-      <a href="javascript:void(0);" rel="clickover" data-placement="left" data-original-title="Compilation Logs" id="view-logs" title="View Logs" class="btn btn-primary pull-right">
+      <a href="javascript:void(0);" rel="clickover" data-placement="left" data-original-title="Compilation Logs" id="view-logs" title="View Logs" data-html="true" class="btn btn-primary pull-right">
 	<i class="icon-road"></i>
 	View Logs
       </a>
