began with adding the first user related functions into an own folder

--- a/views/open-document.ejs
+++ b/views/open-document.ejs
@@ -45,26 +45,27 @@
     --> 
     <% } %>
     <div class="pdf-render">
-      <button class="btn" id="prev" onclick="docs_manager.goPreviousPage();">
-	<i class="icon-arrow-left"></i>
-	Previous
-      </button>
-      <button class="btn" id="next" onclick="docs_manager.goNextPage();">
-	<i class="pull-right icon-arrow-right" style="margin-left:3px;"></i>
-	Next
-      </button>
-      <a href="javascript:void(0);" rel="clickover" data-placement="left" data-original-title="Compilation Logs" id="view-logs" title="View Logs" class="btn btn-primary pull-right">
-	<i class="icon-road"></i>
-	View Logs
-      </a>
-      <span>Page: <span id="page_num"></span> / <span id="page_count"></span></span>
-      <span>Scale: <input onkeyup="docs_manager.changeScale($(this).val());" class="input-mini" type="text" placeholder="Scale" value="1"></span
-      <div>
-	<div id="pdf-canvas">
-	<canvas id="the-canvas">
-	  No PDF
-	</canvas>
-	</div>
+        <button class="btn" id="prev" onclick="docs_manager.goPreviousPage();">
+            <i class="icon-arrow-left"></i>Previous</button>
+        <button class="btn" id="next" onclick="docs_manager.goNextPage();">
+            <i class="pull-right icon-arrow-right" style="margin-left:3px;"></i>Next</button>
+        <a href="javascript:void(0);" rel="clickover" data-placement="left"
+        data-original-title="Compilation Logs" id="view-logs" title="View Logs"
+        class="btn btn-primary pull-right">
+    	<i class="icon-road"></i>
+    	View Logs
+          </a>
+        <span>Page:
+            <span id="page_num"></span>/
+            <span id="page_count"></span>
+        </span>
+        <span>Scale:
+            <input onkeyup="docs_manager.changeScale($(this).val());" class="input-mini"
+            type="text" placeholder="Scale" value="1">
+        </span <div>
+        <div id="pdf-canvas">
+            <canvas id="the-canvas">No PDF</canvas>
+        </div>
       </div>
     </div>
   </div>
