--- a/views/display-docs.ejs
+++ b/views/display-docs.ejs
@@ -38,7 +38,7 @@
                 </ul>
                 <ul class="nav pull-right">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <a href="/" class="dropdown-toggle" data-toggle="dropdown">
                             Manage Projects
                             <b class="caret"></b>
                         </a>
