--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -93,7 +93,7 @@
           
 	    <% } %>
 	    <% } else { %>
-    	  <form action="/" class="form-inline pull-right" method="post">
+    	  <form action="/login" class="form-inline pull-right" method="post">
     	    <input name="username" class="input-small" type="text" placeholder="Username"/>
     	    <input name="password" class="input-small" type="password" placeholder="Password"/>
     	    <button class="btn" type="submit">Sign In</button>
