new accounte settings where user is able to change email and password added

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -81,6 +81,7 @@
             </a>
             <ul class="dropdown-menu">
                 <li><a href="javascript:void(0);" onclick="user_messages.showMessages();">My Messages</a></li>
+                <li><a href="javascript:void(0);" onclick="document.location.href='/accountSettings'">Account Settings</a></li>
                 <li class="divider"></li> 
                 <li><a href="javascript:user_manager.logout();"> Logout</a></li>
             </ul>
